--- a/com.inn.cafe/src/main/resources/application.properties
+++ b/com.inn.cafe/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/cafevideo
 spring.datasource.username=postgres
-spring.datasource.password=Idemia@123456
+spring.datasource.password=private
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
